refactor thrift file to use date to string and exception