@@ -9,19 +9,17 @@ import org.apache.thrift.transport.THttpClient;
 import org.apache.thrift.transport.TTransport;
 import org.apache.thrift.transport.TTransportException;
 
-import java.util.Calendar;
-
 public class Client {
     public static void main(String[] args) {
         var client = getClient();
         try (TTransport transport = client.getInputProtocol().getTransport()) {
             transport.open();
 
-            InternalLeadDto leadDto = new InternalLeadDto("LastName, FirstName", 100, "0612452356", "street", "49000", "Angers", "France", Calendar.getInstance().getTimeInMillis(), "Company", "State");
+            InternalLeadDto leadDto = new InternalLeadDto("LastName, FirstName", 100, "0612452356", "street", "49000", "Angers", "France", "2025-02-07", "Company", "State");
             client.addLead(leadDto);
             System.out.println("Add lead: " + leadDto);
 
-            InternalLeadDto foundLeadDto = client.findLeads(0, 1_000, "State").get(0);
+            InternalLeadDto foundLeadDto = client.findLeads(0, 1_000, "State").getFirst();
             System.out.println("Found lead: " + foundLeadDto);
 
             client.deleteLead(foundLeadDto);
